--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -3,18 +3,25 @@ MAINTAINER Axel Oehmichen <axelfrancois.oehmichen11@imperial.ac.uk>
 
 RUN apt-get update -q \
     && apt-get upgrade -y --install-recommends \
-    && service ssh restart \
-    && sed "/eae-jupyter/d" /etc/hosts |  sed '/127.0.0.1/c  127.0.0.1 eae-jupyter' > /tmp/sed.txt \
-    && cat /tmp/sed.txt > /etc/hosts \
-    && service cloudera-scm-server-db restart \
-    && apt-get install -y git python-numpy python-scipy python-matplotlib ipython python-pip python-scikits-learn \
+    && apt-get install -y git python-numpy python-scipy python-matplotlib ipython python-pip python-scikits-learn nodejs-legacy npm zip libcurl4-openssl-dev libxml2-dev screen\
+    && apt-get -y install libcurl4-gnutls-dev \
     && pip install scimath \
     && pip install pymongo \
     && pip install cm-api \
-    && service cloudera-scm-agent restart \
-    && sleep 20 \
-    && service cloudera-scm-server restart
 
-RUN python Cloudera_Management.py
+WORKDIR /home/eae
 
+ADD Cloudera_Management.py
+ADD irkernel-install.r
+ADD install_notebook.sh
+ADD start_eae.sh
 
+RUN chmod 777 start_eae.sh
+
+RUN bash install_notebook.sh
+
+EXPOSE 7180 7777 8888 18088
+
+VOLUME ["/home/eae/"]
+
+CMD ["bash", "-c", "/home/eae/start_eae.sh"]
