--- a/mongo/docker-compose.yml
+++ b/mongo/docker-compose.yml
@@ -1,12 +1,11 @@
 version: '2'
 
 services:
-  mongodb:
-    image: mongo:3.4.0
-    restart: unless-stopped
-    ports:
-    - "27017:27017"
-  interfaceEAE:
+  mongo-initialize:
     image: aoehmich/mongo-eae:latest
     depends_on:
-    - mongodb
+    - mongo
+  mongo:
+    image: mongo:3.4.0
+    ports:
+    - "27017:27017"
