--- a/workerExample/Dockerfile
+++ b/workerExample/Dockerfile
@@ -6,7 +6,7 @@ ADD start_eae.sh /root
 
 ## We install all the dependencies
 RUN apt-get update -q && apt-get upgrade -y --no-install-recommends \
-    && apt-get install -y git wget curl nodejs-legacy npm zip python-numpy python-scipy python-matplotlib python-pip python-scikits-learn libcurl4-openssl-dev libncurses-dev \
+    && apt-get install -y vim git wget curl nodejs-legacy npm zip python-numpy python-scipy python-matplotlib python-pip python-scikits-learn libcurl4-openssl-dev libncurses-dev \
     && apt-get install -y libcurl4-gnutls-dev tcl-dev psmisc \
     && pip install scimath \
     && pip install pymongo \
@@ -34,7 +34,7 @@ RUN curl -L https://github.com/aoehmichen/eae-files/raw/master/op.tar.gz -o /roo
     && cp /opt/openlava-3.3/etc/openlava.* /etc/profile.d \
     && chown openlava:openlava /etc/profile.d/openlava.* \
     && chmod 755 /etc/profile.d/openlava.sh \
-    && mv lsf.cluster.openlava /opt/openlava-3.3/etc/
+    && mv /root/lsf.cluster.openlava /opt/openlava-3.3/etc/
 
 # We set up the ssh keys for user eae
 RUN mkdir ~/.ssh && chmod 700 ~/.ssh
