--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,32 @@ version: '2'
 services:
   interfaceeae:
     image: aoehmich/interfaceEAE:latest
+    hostname: interfaceeae
+    stdin_open: true
+    tty: true
     depends_on:
     - mongo
     - worker1
     - worker2
     ports:
-    - "22:22"
     - "8443:8443"
-    - "16322:16322/udp"
-    - "16322:16322"
-    - "16323:16323"
   worker1:
-    image: aoehmich/worker1:latest
-    ports:
-    - "22:22"
-    - "8443:8443"
-    - "16322:16322/udp"
-    - "16322:16322"
-    - "16323:16323"
+    image: aoehmich/workerEAE:latest
+    container_name: worker1
+    hostname: worker1
+    stdin_open: true
+    tty: true
   worker2:
-      image: aoehmich/worker1:latest
-      ports:
-      - "22:22"
-      - "8443:8443"
-      - "16322:16322/udp"
-      - "16322:16322"
-      - "16323:16323"
+    image: aoehmich/workerEAE:latest
+    container_name: worker2
+    hostname: worker2
+    stdin_open: true
+    tty: true
+  mongo-initialize:
+    image: aoehmich/mongoEAE:latest
+    depends_on:
+    - mongo
+  mongo:
+    image: mongo:3.4.0
+    ports:
+    - "27017:27017"
