--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '2'
 
 services:
+  # eAE Parts
   jupyter:
     image: aoehmich/jupyterEAE:latest
     hostname: interfaceeae
@@ -43,3 +44,43 @@ services:
     image: mongo:3.4.0
     ports:
     - "27017:27017"
+
+  # tranSMART with the eAE plugin
+    tmweb:
+      image: httpd:alpine
+      restart: unless-stopped
+      network_mode: host
+      depends_on:
+        - tmapp
+      volumes:
+        - "./transmart-web/httpd-vhosts.conf:/usr/local/apache2/conf/extra/httpd-vhosts.conf"
+        - "./transmart-web/httpd.conf:/usr/local/apache2/conf/httpd.conf"
+    tmapp:
+      image: aoehmich/transmart-app-EAE:etriks-v3.0
+      restart: unless-stopped
+      ports:
+        - "127.0.0.1:8009:8009"
+      depends_on:
+        - tmdb
+        - tmsolr
+      volumes:
+        - "./transmart-app/Config.groovy:/root/.grails/transmartConfig/Config.groovy"
+        - "./transmart-app/DataSource.groovy:/root/.grails/transmartConfig/DataSource.groovy"
+        - "./transmart-app/setenv.sh:/usr/local/tomcat/bin/setenv.sh"
+    tmdb:
+      image: dennyverbeeck/transmart-db:etriks-v3.0
+      restart: unless-stopped
+      ports:
+        - "127.0.0.1:5432:5432"
+    tmsolr:
+      image: dennyverbeeck/transmart-solr:etriks-v3.0
+      restart: unless-stopped
+    tmrserve:
+      image: dennyverbeeck/transmart-rserve:etriks-v3.0
+      restart: unless-stopped
+      volumes_from:
+        - tmapp
+    tmload:
+      image: dennyverbeeck/transmart-load:etriks-v3.0
+      depends_on:
+        - tmdb
