changin tag annd lower casing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
         - "./transmart-web/httpd-vhosts.conf:/usr/local/apache2/conf/extra/httpd-vhosts.conf"
         - "./transmart-web/httpd.conf:/usr/local/apache2/conf/httpd.conf"
     tmapp:
-      image: aoehmich/transmart-app-EAE:etriks-v3.0
+      image: aoehmich/transmart-app-eae:latest
       restart: unless-stopped
       ports:
         - "127.0.0.1:8009:8009"
